[package]
name = "ferrochain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
convert_case = "0.6.0"
futures = "0.3.30"
indoc = "2.0.5"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "completions/anthropic",
    "embedders/jina-embedder",
    "embedders/voyageai-embedder",
    "graphstore/neo4j-graphstore",
    "loaders/markdown-loader",
    "memories/in-memory-memory",
    "rerankers/jina-reranker",
    "rerankers/voyageai-reranker",
    "retrievers/exa-retriever",
    "retrievers/tavily-retriever",
    "splitters/markdown-splitter",
    "splitters/code-splitter",
    "vectorstores/qdrant-vectorstore",
]

[workspace.dependencies]
anyhow = "1.0.86"
ferrochain = { path = "." }
jina-sdk = { git = "https://github.com/fdionisi/jina-sdk", rev = "bb3845c85787017339603fe5b4a3b03447786cdd" }
serde_json = "1.0.121"
voyageai-sdk = { git = "https://github.com/fdionisi/voyageai-sdk", rev = "e61ea19730b343fa448b3100a84170ac26f243e2" }
exa-sdk = { git = "https://github.com/fdionisi/exa-sdk", rev = "24e8fb140d57cb8dafd7aad3390edff96089cfd7" }
http-client = { git = "https://github.com/fdionisi/http-client", rev = "033ac96ab12ac3d13b78f9725b237380917c7094" }
