[package]
name = "ferrochain-anthropic-completion"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic = { git = "https://github.com/fdionisi/anthropic-sdk", rev = "914dfb5718dbf6d4225b0d233fe38b7dba89803e" }
async-stream = "0.3.6"
http-client.workspace = true
ferrochain.workspace = true
serde_json.workspace = true
