[package]
name = "ferrochain-code-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrochain.workspace = true
tree-sitter = "0.23.2"
tree-sitter-language = "0.1.2"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.2"
tree-sitter-javascript = "0.23.0"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
